<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditarContacto"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <ImageView
        android:id="@+id/imgvTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:paddingTop="25dp"
        android:src="@drawable/contacto" />

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="40sp"
        android:gravity="center"
        android:text="@string/editar"
        android:textSize="30dp" />


    <LinearLayout
        android:layout_width="387dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textNom"
            android:layout_width="194dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:text="@string/NombreEditar"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textNombre"
            android:layout_width="188dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="20dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="387dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:text="@string/FechaEditar"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textFecha"
            android:layout_width="184dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="20sp"
            android:textSize="20dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="387dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textTelefono"
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:text="@string/TelefonoEditar"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textTel"
            android:layout_width="186dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="20sp"
            android:textSize="20dp" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="386dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textCorreo"
            android:layout_width="191dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:text="@string/EmailEditar"
            android:textSize="20dp" />


        <TextView
            android:id="@+id/textEmail"
            android:layout_width="186dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="20sp"
            android:textSize="20dp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="385dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textDescripcion"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:text="@string/DescripcionEditar"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textDescrip"
            android:layout_width="188dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="20sp"
            android:textSize="20dp" />

    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/EditarDatos"
        android:layout_marginTop="40dp"
        android:theme="@style/MiBotonRaised"/>


</LinearLayout>